Add java library for network call and async caller

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.google.android.gms:play-services-ads:10.0.1'
+
+    compile project(':javalib')
 }
