--- a/gce_backend/src/main/webapp/WEB-INF/web.xml
+++ b/gce_backend/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
         <servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
         <init-param>
             <param-name>services</param-name>
-            <param-value>com.nx.printart.builditbigger.MyEndpoint</param-value>
+            <param-value>com.nx.printart.backend.MyEndpoint</param-value>
         </init-param>
     </servlet>
     <servlet-mapping>
