--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    productFlavors {
+        paid {
+            applicationId = "com.nx.printart.builditbigger.paid"
+        }
+        free {
+            applicationId = "com.nx.printart.builditbigger.free"
+            dependencies {
+                compile 'com.google.android.gms:play-services-ads:10.0.1'
+            }
+        }
+    }
+
 }
 
 dependencies {
@@ -35,9 +48,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile project(':androidlib')
     compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.google.android.gms:play-services-ads:10.0.1'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     testCompile 'junit:junit:4.12'
     compile project(path: ':gce_backend', configuration: 'android-endpoints')
